summative.moria.Moria.scala.error
Erreur de compilation :
Moria:2: error: not found: value x
  x = getX()
  ^Moria:3: error: not found: value y
  y = getY()
  ^Moria:5: error: not found: value x
    setPos(x + 1, y)
           ^Moria:5: error: not found: value y
    setPos(x + 1, y)
                  ^Moria:8: error: not found: value x
    setPos(x - 1, y)
           ^Moria:8: error: not found: value y
    setPos(x - 1, y)
                  ^Moria:10: error: not found: value x
      setPos(x + 1,y)
             ^Moria:10: error: not found: value y
      setPos(x + 1,y)
                   ^Moria:14: error: not found: value x
} while(x != getMondeLargeur() - 4)
        ^Moria:15: error: not found: value y
setPos(getMondeLargeur() - 2, y + 1) 
                              ^